--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 *._DS_Store
 
 # Other random file types or Binary files
-*.h  #ignored - however a C-Bridging Header.h file is needed to compile this project
+*.h  
+# ignored - however a C-Bridging Header.h file is needed to compile this project
 *.m 
 
 
